# jai

./: .gitignore  AUTHORS  INSTALL  Makefile.am  configure.ac  fs.cc  fs.h  jai.1.md  jai.cc  jai.h  options.h
src/: complete.cc  jai.cc  jai.h  netns.cc  netns.h
tests/: .gitignore  Makefile.am  basic.sh  casual-overlay.sh  common.sh.in  config-dir-hidden.sh  config-precedence.sh  home-cwd-guard.sh  jai-test-probe.cc  jai-test-pty-driver.cc  jail-files.sh  job-control-same-pgrp-stop.sh  job-control-sigtstp-fallback.sh  job-control-sigtstp-preserve.sh  job-control.sh  mask.sh  modes.sh  options_test.cc  process-state.sh  setup-setuid.sh.in  storage-from-conf.sh  storage.sh  strict-home-grant.sh  sudo-env.sh  teardown.sh
